--- a/styles/scss/image-gallery.scss
+++ b/styles/scss/image-gallery.scss
@@ -3,12 +3,12 @@ $ig-xsmall-screen: 480px !default;
 $ig-white: #fff !default;
 $ig-black: #000 !default;
 $ig-blue: #337ab7 !default;
-$ig-background-black: rgba(0, 0, 0, .4) !default;
+$ig-background-black: rgba(0, 0, 0, 0.4) !default;
 $ig-transparent: rgba(0, 0, 0, 0) !default;
 $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
 
 @mixin vendor-prefix($name, $value) {
-  @each $vendor in ('-webkit-', '-moz-', '-ms-', '-o-', '') {
+  @each $vendor in ("-webkit-", "-moz-", "-ms-", "-o-", "") {
     #{$vendor}#{$name}: #{$value};
   }
 }
@@ -16,7 +16,7 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
 // SVG ICON STYLES
 .image-gallery-icon {
   color: $ig-white;
-  transition: all .3s ease-out;
+  transition: all 0.3s ease-out;
   appearance: none;
   background-color: transparent;
   border: 0;
@@ -113,7 +113,7 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
 
   &[disabled] {
     cursor: disabled;
-    opacity: .6;
+    opacity: 0.6;
     pointer-events: none;
   }
 }
@@ -128,7 +128,7 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
 // End of Icon styles
 
 .image-gallery {
-  @include vendor-prefix('user-select', none);
+  @include vendor-prefix("user-select", none);
   -webkit-tap-highlight-color: $ig-transparent;
   position: relative;
 
@@ -153,14 +153,13 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
 .image-gallery-content {
   position: relative;
   line-height: 0;
-  top: 0;
 
   &.fullscreen {
     background: $ig-black;
   }
 
   .image-gallery-slide .image-gallery-image {
-    max-height: calc(100vh - 80px); // 80 px for the thumbnail space
+    max-height: calc(100vh-80px); // 80 px for the thumbnail space
   }
 
   &.left,
@@ -209,6 +208,7 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
   .image-gallery-image {
     width: 100%;
     object-fit: contain;
+    margin: auto;
   }
 
   .image-gallery-description {
@@ -223,10 +223,9 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
 
     @media (max-width: $ig-small-screen) {
       bottom: 45px;
-      font-size: .8em;
+      font-size: 0.8em;
       padding: 8px 15px;
     }
-
   }
 }
 
@@ -256,7 +255,7 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
     margin: 0 5px;
     outline: none;
     padding: 5px;
-    transition: all .2s ease-out;
+    transition: all 0.2s ease-out;
 
     @media (max-width: $ig-small-screen) {
       margin: 0 3px;
@@ -333,9 +332,7 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
           margin-left: 0;
           margin-top: 2px;
         }
-
       }
-
     }
   }
 
@@ -361,14 +358,14 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
     cursor: pointer;
     text-align: center;
     white-space: nowrap;
+    display: flex;
   }
-
 }
 
 .image-gallery-thumbnail {
   display: inline-block;
   border: 4px solid transparent;
-  transition: border .3s ease-out;
+  transition: border 0.3s ease-out;
   width: 100px;
   background: transparent;
   padding: 0;
@@ -413,7 +410,6 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
       }
     }
   }
-
 }
 
 .image-gallery-thumbnail-label {
@@ -430,9 +426,9 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
   white-space: normal;
   width: 100%;
 
-  @media(max-width: $ig-small-screen) {
-    font-size: .8em;
-    line-height: .8em;
+  @media (max-width: $ig-small-screen) {
+    font-size: 0.8em;
+    line-height: 0.8em;
   }
 }
 
@@ -442,12 +438,76 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
   line-height: 1;
   padding: 10px 20px;
   position: absolute;
-  right: 0;
-  top: 0;
+  left: 50%;
+  top: 1%;
+  -ms-transform: translateX(-50%);
+  -webkit-transform: translate(-50%);
+  transform: translate(-50%);
   z-index: 4;
 
-  @media(max-width: $ig-small-screen) {
-    font-size: .8em;
+  @media (max-width: $ig-small-screen) {
+    font-size: 0.8em;
     padding: 5px 10px;
   }
+}
+
+.zoom-container {
+  position: absolute;
+  width: 95vw;
+  top: 1%;
+  display: flex;
+  justify-content: space-between;
+  width: 100vw;
+  color: black;
+  z-index: 4;
+}
+
+.zoom-controls {
+  display: flex;
+  gap: 16px;
+}
+
+.zoom-button {
+  color: $ig-white;
+  transition: all 0.3s ease-out;
+  appearance: none;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  outline: none;
+  z-index: 4;
+  filter: drop-shadow($ig-shadow);
+
+  .image-gallery-svg {
+    height: 30px;
+    width: 30px;
+  }
+
+  &[disabled] {
+    cursor: disabled;
+    opacity: 0.6;
+    pointer-events: none;
+  }
+
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      color: $ig-blue;
+      .image-gallery-svg {
+        transform: scale(1.1);
+      }
+    }
+  }
+
+  &:focus {
+    // a11y support
+    outline: 2px solid $ig-blue;
+  }
+}
+
+.reset-icon {
+  scale: 75%;
+}
+
+.react-transform-component.react-transform-component {
+  margin: auto;
 }
