Fix image wrapper issue

--- a/styles/scss/image-gallery.scss
+++ b/styles/scss/image-gallery.scss
@@ -514,7 +514,7 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
   height: unset !important;
 }
 
-.react-transform-element {
+.react-transform-wrapper {
   width: unset !important;
   height: unset !important;
 }
