--- a/styles/scss/image-gallery.scss
+++ b/styles/scss/image-gallery.scss
@@ -198,11 +198,11 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
 .image-gallery-slide {
   left: 0;
   position: absolute;
-  top: 0;
   width: 100%;
 
   &.center {
     position: relative;
+    justify-content: center;
   }
 
   .image-gallery-image {
